--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,17 @@ div {
 #yellow {
     background-color: #FFFF00;
     text-align: right;
-    text-shadow: 5px 5px 2px #C7E2C7
 }
+
+#yellow p {
+    color: #000000;
+}
+
+#yellow h2 {
+    color: #000000;
+    text-shadow: 5px 5px 2px #C7E2C7;
+}
+
 
 #green {
     background-color: #008000;
